Fixed and added many things
Too much to describe

--- a/src/css/maincss.css
+++ b/src/css/maincss.css
@@ -79,6 +79,7 @@ button {
     background: #ffffff;
 
     font-size: 1em;
+    font-family: Ubuntu, Verdana, sans-serif;
 }
 
 button:disabled {
@@ -315,7 +316,7 @@ div#signInPlaceholder:hover  {
 }
 
 #welcomeMessage > button {
-    padding: 2px;
+    padding: 4px;
     border: 1px solid #676767;
     font-size: 0.8em;
 }
@@ -382,7 +383,7 @@ div#signInPlaceholder:hover  {
 
 #taskListHeader > button {
     margin: 5px 0 5px 0;
-    padding: 2px;
+    padding: 4px;
     border: 1px solid #676767;
     font-size: 0.75em;
     display: block;
@@ -400,7 +401,7 @@ div#signInPlaceholder:hover  {
 
 .task button {
     margin: 0 4px 0 0;
-    padding: 2px;
+    padding: 4px;
     border: 1px solid #676767;
     font-size: 0.8em;
 }
@@ -419,9 +420,30 @@ div#signInPlaceholder:hover  {
 }
 
 /**** Create/Edit task popup ****/
-#newTaskForm, #viewEditTaskForm {
-    width: 440px;
-    height: 500px;
+#pageBlurrer {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    display: none;
+    opacity: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background: #444;
+    z-index: 2;
+
+    -o-transition: all 0.35s;
+    -ms-transition: all 0.35s;
+    -moz-transition: all 0.35s;
+    -webkit-transition: all 0.35s;
+    transition: all 0.35s;
+}
+
+.formDialog {
+    width: 680px;
+    height: 600px;
     display: none;
     opacity: 0;
 
@@ -440,4 +462,39 @@ div#signInPlaceholder:hover  {
     -moz-transition: all 0.35s;
     -webkit-transition: all 0.35s;
     transition: all 0.35s;
+
+    z-index: 3;
 }
+
+#newCategoryForm {
+    width: 440px;
+    height: 200px;
+    
+    top: 35%;
+}
+
+.formDialog > div {
+    position: relative;
+    padding: 52px 10px 0 10px;
+}
+
+.dialogCloseBox {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+
+    padding: 4px;
+    width: 20px;
+
+    font-weight: bold;
+    text-align: center;
+    border-radius: 20px;
+    border: 3px solid #474747;
+    background: #878787;
+}
+
+.dialogCloseBox:hover {
+    cursor: pointer;
+    background: #c0c0c0;    
+}
+
